Restyle form elements to prevent layout shift

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -246,10 +246,9 @@ input[type=date],
 textarea,
 input[type=submit] {
     width: 100%;
+    height: 44px;
     margin: 6px 0;
-    padding: 12px;
-    -webkit-transition: 0.5s;
-    transition: 0.5s;
+    padding: 0 10px;
     outline: none;
     font-family: 'Open Sans', sans-serif;
     font-size: 1rem;
@@ -260,7 +259,6 @@ input[type=submit] {
 input[type=submit] {
     background-color: #013944;
     color: #ffffff;
-    border: 1px solid #013944;
 }
 
 /* Style rule to set border thickness, style and colour when cursor hovers over input */
@@ -282,6 +280,7 @@ select:focus,
 input[type=date]:focus,
 textarea:focus,
 input[type=submit]:focus {
+    /* padding: 11px; */
     border: 2px solid #e3b26a;
 }
 
@@ -438,7 +437,8 @@ to hide the coloured background at the top */
 
 /* Style rule to set height of textarea for even layout of elements in two columns */
 .contact-form textarea {
-    height: 313px;
+    height: 295px;
+    padding: 10px;
 }
 
 /* FIND */
@@ -492,7 +492,7 @@ to hide the coloured background at the top */
 
 /* Style rule to set top and bottom margins for positioning */
 #newsletter .decor {
-    margin: 4.5px 0;
+    margin: 4px 0;
 }
 
 /* Style rule to set size and position of newsletter header */
